// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing component rednering propperly renders About screen 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container page-about"
      >
        <div
          class="info-container"
        >
          <p>
            License Requirements: US & Canadian residents must have a Valid driver’s license and must be present at the time of the rental. No photocopies or temporary license’s accepted.
          </p>
          <p>
            International Clients: Clients traveling from abroad will need to obtain their own International Auto Insurance Coverage. We do not offer any insurance coverage here to our clients.
          </p>
          <p>
            Cancellation Policy: Cancellations must be within 48 hours of the booking date to receive a full refund. (NOT 48 hours before picking up your vehicle on the reservation date.) Cancellations after 48 hours of the booking date will receive a gift certificate towards a future reservation.
          </p>
          <p>
            Any cancellations due to Covid-19, city/state closures, or any type of pandemic issue, will follow our standard company cancellation policy.
          </p>
          <p>
            Deposits: We Require a minimum of $500 to $2000 USD deposit depending on the vehicle. Deposits are fully refundable once the vehicle is inspected upon return. Deposits can take 5-7 business days or sometimes longer depending on your banking system.
          </p>
          <h2>
            Locations
          </h2>
          <div
            class="stores"
          >
            <div>
              <p
                class="no-margin-padding"
              >
                <strong>
                  Bogota (COL)
                </strong>
              </p>
              <p
                class="no-margin-padding"
              >
                <small>
                  Callr 116 554
                </small>
              </p>
              <p>
                <a
                  href="tel:+57 (1) 752-5200"
                >
                  +57 (1) 752-5200
                </a>
              </p>
            </div>
            <div>
              <p
                class="no-margin-padding"
              >
                <strong>
                  Hermosillo (MEX)
                </strong>
              </p>
              <p
                class="no-margin-padding"
              >
                <small>
                  Blvd. Morelos 1054
                </small>
              </p>
              <p>
                <a
                  href="tel:+52 (662) 260-5042"
                >
                  +52 (662) 260-5042
                </a>
              </p>
            </div>
            <div>
              <p
                class="no-margin-padding"
              >
                <strong>
                  Manizalez (COL)
                </strong>
              </p>
              <p
                class="no-margin-padding"
              >
                <small>
                  Cr21 23-19
                </small>
              </p>
              <p>
                <a
                  href="tel:+57 (601) 705-0000"
                >
                  +57 (601) 705-0000
                </a>
              </p>
            </div>
            <div>
              <p
                class="no-margin-padding"
              >
                <strong>
                  Sao Paulo (BRA)
                </strong>
              </p>
              <p
                class="no-margin-padding"
              >
                <small>
                  Avenida dos Bandeirantes 423
                </small>
              </p>
              <p>
                <a
                  href="tel:+55 (11) 122-5669"
                >
                  +55 (11) 122-5669
                </a>
              </p>
            </div>
          </div>
          <p>
            <strong>
              See more details about our API, that was developed for this project on Ruby on Rails
               
              <a
                href="undefined/api-docs/index.html"
                rel="noreferrer"
                target="_blank"
              >
                here
              </a>
              .
            </strong>
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container page-about"
    >
      <div
        class="info-container"
      >
        <p>
          License Requirements: US & Canadian residents must have a Valid driver’s license and must be present at the time of the rental. No photocopies or temporary license’s accepted.
        </p>
        <p>
          International Clients: Clients traveling from abroad will need to obtain their own International Auto Insurance Coverage. We do not offer any insurance coverage here to our clients.
        </p>
        <p>
          Cancellation Policy: Cancellations must be within 48 hours of the booking date to receive a full refund. (NOT 48 hours before picking up your vehicle on the reservation date.) Cancellations after 48 hours of the booking date will receive a gift certificate towards a future reservation.
        </p>
        <p>
          Any cancellations due to Covid-19, city/state closures, or any type of pandemic issue, will follow our standard company cancellation policy.
        </p>
        <p>
          Deposits: We Require a minimum of $500 to $2000 USD deposit depending on the vehicle. Deposits are fully refundable once the vehicle is inspected upon return. Deposits can take 5-7 business days or sometimes longer depending on your banking system.
        </p>
        <h2>
          Locations
        </h2>
        <div
          class="stores"
        >
          <div>
            <p
              class="no-margin-padding"
            >
              <strong>
                Bogota (COL)
              </strong>
            </p>
            <p
              class="no-margin-padding"
            >
              <small>
                Callr 116 554
              </small>
            </p>
            <p>
              <a
                href="tel:+57 (1) 752-5200"
              >
                +57 (1) 752-5200
              </a>
            </p>
          </div>
          <div>
            <p
              class="no-margin-padding"
            >
              <strong>
                Hermosillo (MEX)
              </strong>
            </p>
            <p
              class="no-margin-padding"
            >
              <small>
                Blvd. Morelos 1054
              </small>
            </p>
            <p>
              <a
                href="tel:+52 (662) 260-5042"
              >
                +52 (662) 260-5042
              </a>
            </p>
          </div>
          <div>
            <p
              class="no-margin-padding"
            >
              <strong>
                Manizalez (COL)
              </strong>
            </p>
            <p
              class="no-margin-padding"
            >
              <small>
                Cr21 23-19
              </small>
            </p>
            <p>
              <a
                href="tel:+57 (601) 705-0000"
              >
                +57 (601) 705-0000
              </a>
            </p>
          </div>
          <div>
            <p
              class="no-margin-padding"
            >
              <strong>
                Sao Paulo (BRA)
              </strong>
            </p>
            <p
              class="no-margin-padding"
            >
              <small>
                Avenida dos Bandeirantes 423
              </small>
            </p>
            <p>
              <a
                href="tel:+55 (11) 122-5669"
              >
                +55 (11) 122-5669
              </a>
            </p>
          </div>
        </div>
        <p>
          <strong>
            See more details about our API, that was developed for this project on Ruby on Rails
             
            <a
              href="undefined/api-docs/index.html"
              rel="noreferrer"
              target="_blank"
            >
              here
            </a>
            .
          </strong>
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Testing component rednering propperly renders Login screen 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container page-login"
      >
        <form
          action="#"
          class="login-form"
          method="POST"
        >
          <h2>
            LOGIN
          </h2>
          <div
            class="add-padding-below"
          >
            <span
              class="error-message"
            >
              Error with credentials
            </span>
            <input
              class="form-field"
              id="email"
              name="email"
              placeholder="Email"
              required=""
              type="email"
            />
          </div>
          <div
            class="add-padding-below"
          >
            <input
              class="form-field"
              id="password"
              name="password"
              placeholder="Password"
              required=""
              type="password"
            />
          </div>
          <p
            class="signin-message"
          >
            Don't have an account yet?
            <a
              href="/signup"
            >
              SIGN UP
            </a>
          </p>
          <div
            class="form-bottom-bar"
          >
            <button
              class="main color-dark"
              type="button"
            >
              Login
            </button>
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container page-login"
    >
      <form
        action="#"
        class="login-form"
        method="POST"
      >
        <h2>
          LOGIN
        </h2>
        <div
          class="add-padding-below"
        >
          <span
            class="error-message"
          >
            Error with credentials
          </span>
          <input
            class="form-field"
            id="email"
            name="email"
            placeholder="Email"
            required=""
            type="email"
          />
        </div>
        <div
          class="add-padding-below"
        >
          <input
            class="form-field"
            id="password"
            name="password"
            placeholder="Password"
            required=""
            type="password"
          />
        </div>
        <p
          class="signin-message"
        >
          Don't have an account yet?
          <a
            href="/signup"
          >
            SIGN UP
          </a>
        </p>
        <div
          class="form-bottom-bar"
        >
          <button
            class="main color-dark"
            type="button"
          >
            Login
          </button>
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Testing component rednering propperly renders Navbar component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="menuMobile"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
          />
        </svg>
      </div>
      <div
        class="navbar nav-show"
      >
        <div
          class="closeBtn"
        >
          <svg
            class="icon"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 352 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </div>
        <div
          class="navTop"
        >
          <a
            class="img-container"
            href="/"
          />
          <nav>
            <ul>
              <li>
                <a
                  class=""
                  href="/models"
                >
                  MODELS
                </a>
              </li>
              <li>
                <a
                  class=""
                  href="/reservation"
                >
                  RESERVATIONS
                </a>
              </li>
              <li>
                <a
                  class=""
                  href="/booking"
                >
                  BOOKING
                </a>
              </li>
              <li>
                <a
                  class=""
                  href="/about"
                >
                  ABOUT
                </a>
              </li>
            </ul>
          </nav>
        </div>
        <div
          class="social-icons"
        >
          <ul>
            <li>
              <a
                aria-label="GitHub"
                href="https://github.com/ElsonOtake/"
                rel="noreferrer"
                target="_blank"
              >
                <svg
                  class="icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 496 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                  />
                </svg>
              </a>
            </li>
            <li>
              <a
                aria-label="LinkedIn"
                href="https://www.linkedin.com/in/elsonotake"
                rel="noreferrer"
                target="_blank"
              >
                <svg
                  class="icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"
                  />
                </svg>
              </a>
            </li>
            <li>
              <a
                aria-label="Wellfound"
                href="https://wellfound.com/u/elsonotake"
                rel="noreferrer"
                target="_blank"
              >
                <svg
                  class="icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M347.1 215.4c11.7-32.6 45.4-126.9 45.4-157.1 0-26.6-15.7-48.9-43.7-48.9-44.6 0-84.6 131.7-97.1 163.1C242 144 196.6 0 156.6 0c-31.1 0-45.7 22.9-45.7 51.7 0 35.3 34.2 126.8 46.6 162-6.3-2.3-13.1-4.3-20-4.3-23.4 0-48.3 29.1-48.3 52.6 0 8.9 4.9 21.4 8 29.7-36.9 10-51.1 34.6-51.1 71.7C46 435.6 114.4 512 210.6 512c118 0 191.4-88.6 191.4-202.9 0-43.1-6.9-82-54.9-93.7zM311.7 108c4-12.3 21.1-64.3 37.1-64.3 8.6 0 10.9 8.9 10.9 16 0 19.1-38.6 124.6-47.1 148l-34-6 33.1-93.7zM142.3 48.3c0-11.9 14.5-45.7 46.3 47.1l34.6 100.3c-15.6-1.3-27.7-3-35.4 1.4-10.9-28.8-45.5-119.7-45.5-148.8zM140 244c29.3 0 67.1 94.6 67.1 107.4 0 5.1-4.9 11.4-10.6 11.4-20.9 0-76.9-76.9-76.9-97.7.1-7.7 12.7-21.1 20.4-21.1zm184.3 186.3c-29.1 32-66.3 48.6-109.7 48.6-59.4 0-106.3-32.6-128.9-88.3-17.1-43.4 3.8-68.3 20.6-68.3 11.4 0 54.3 60.3 54.3 73.1 0 4.9-7.7 8.3-11.7 8.3-16.1 0-22.4-15.5-51.1-51.4-29.7 29.7 20.5 86.9 58.3 86.9 26.1 0 43.1-24.2 38-42 3.7 0 8.3.3 11.7-.6 1.1 27.1 9.1 59.4 41.7 61.7 0-.9 2-7.1 2-7.4 0-17.4-10.6-32.6-10.6-50.3 0-28.3 21.7-55.7 43.7-71.7 8-6 17.7-9.7 27.1-13.1 9.7-3.7 20-8 27.4-15.4-1.1-11.2-5.7-21.1-16.9-21.1-27.7 0-120.6 4-120.6-39.7 0-6.7.1-13.1 17.4-13.1 32.3 0 114.3 8 138.3 29.1 18.1 16.1 24.3 113.2-31 174.7zm-98.6-126c9.7 3.1 19.7 4 29.7 6-7.4 5.4-14 12-20.3 19.1-2.8-8.5-6.2-16.8-9.4-25.1z"
                  />
                </svg>
              </a>
            </li>
            <li>
              <a
                aria-label="Medium"
                href="https://medium.com/@elsonotake"
                rel="noreferrer"
                target="_blank"
              >
                <svg
                  class="icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 32v448h448V32H0zm372.2 106.1l-24 23c-2.1 1.6-3.1 4.2-2.7 6.7v169.3c-.4 2.6.6 5.2 2.7 6.7l23.5 23v5.1h-118V367l24.3-23.6c2.4-2.4 2.4-3.1 2.4-6.7V199.8l-67.6 171.6h-9.1L125 199.8v115c-.7 4.8 1 9.7 4.4 13.2l31.6 38.3v5.1H71.2v-5.1l31.6-38.3c3.4-3.5 4.9-8.4 4.1-13.2v-133c.4-3.7-1-7.3-3.8-9.8L75 138.1V133h87.3l67.4 148L289 133.1h83.2v5z"
                  />
                </svg>
              </a>
            </li>
          </ul>
          <p>
            Microverse Copyright 2022
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="menuMobile"
    >
      <svg
        class="icon"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
        />
      </svg>
    </div>
    <div
      class="navbar nav-show"
    >
      <div
        class="closeBtn"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 352 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          />
        </svg>
      </div>
      <div
        class="navTop"
      >
        <a
          class="img-container"
          href="/"
        />
        <nav>
          <ul>
            <li>
              <a
                class=""
                href="/models"
              >
                MODELS
              </a>
            </li>
            <li>
              <a
                class=""
                href="/reservation"
              >
                RESERVATIONS
              </a>
            </li>
            <li>
              <a
                class=""
                href="/booking"
              >
                BOOKING
              </a>
            </li>
            <li>
              <a
                class=""
                href="/about"
              >
                ABOUT
              </a>
            </li>
          </ul>
        </nav>
      </div>
      <div
        class="social-icons"
      >
        <ul>
          <li>
            <a
              aria-label="GitHub"
              href="https://github.com/ElsonOtake/"
              rel="noreferrer"
              target="_blank"
            >
              <svg
                class="icon"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 496 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              aria-label="LinkedIn"
              href="https://www.linkedin.com/in/elsonotake"
              rel="noreferrer"
              target="_blank"
            >
              <svg
                class="icon"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              aria-label="Wellfound"
              href="https://wellfound.com/u/elsonotake"
              rel="noreferrer"
              target="_blank"
            >
              <svg
                class="icon"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M347.1 215.4c11.7-32.6 45.4-126.9 45.4-157.1 0-26.6-15.7-48.9-43.7-48.9-44.6 0-84.6 131.7-97.1 163.1C242 144 196.6 0 156.6 0c-31.1 0-45.7 22.9-45.7 51.7 0 35.3 34.2 126.8 46.6 162-6.3-2.3-13.1-4.3-20-4.3-23.4 0-48.3 29.1-48.3 52.6 0 8.9 4.9 21.4 8 29.7-36.9 10-51.1 34.6-51.1 71.7C46 435.6 114.4 512 210.6 512c118 0 191.4-88.6 191.4-202.9 0-43.1-6.9-82-54.9-93.7zM311.7 108c4-12.3 21.1-64.3 37.1-64.3 8.6 0 10.9 8.9 10.9 16 0 19.1-38.6 124.6-47.1 148l-34-6 33.1-93.7zM142.3 48.3c0-11.9 14.5-45.7 46.3 47.1l34.6 100.3c-15.6-1.3-27.7-3-35.4 1.4-10.9-28.8-45.5-119.7-45.5-148.8zM140 244c29.3 0 67.1 94.6 67.1 107.4 0 5.1-4.9 11.4-10.6 11.4-20.9 0-76.9-76.9-76.9-97.7.1-7.7 12.7-21.1 20.4-21.1zm184.3 186.3c-29.1 32-66.3 48.6-109.7 48.6-59.4 0-106.3-32.6-128.9-88.3-17.1-43.4 3.8-68.3 20.6-68.3 11.4 0 54.3 60.3 54.3 73.1 0 4.9-7.7 8.3-11.7 8.3-16.1 0-22.4-15.5-51.1-51.4-29.7 29.7 20.5 86.9 58.3 86.9 26.1 0 43.1-24.2 38-42 3.7 0 8.3.3 11.7-.6 1.1 27.1 9.1 59.4 41.7 61.7 0-.9 2-7.1 2-7.4 0-17.4-10.6-32.6-10.6-50.3 0-28.3 21.7-55.7 43.7-71.7 8-6 17.7-9.7 27.1-13.1 9.7-3.7 20-8 27.4-15.4-1.1-11.2-5.7-21.1-16.9-21.1-27.7 0-120.6 4-120.6-39.7 0-6.7.1-13.1 17.4-13.1 32.3 0 114.3 8 138.3 29.1 18.1 16.1 24.3 113.2-31 174.7zm-98.6-126c9.7 3.1 19.7 4 29.7 6-7.4 5.4-14 12-20.3 19.1-2.8-8.5-6.2-16.8-9.4-25.1z"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              aria-label="Medium"
              href="https://medium.com/@elsonotake"
              rel="noreferrer"
              target="_blank"
            >
              <svg
                class="icon"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 32v448h448V32H0zm372.2 106.1l-24 23c-2.1 1.6-3.1 4.2-2.7 6.7v169.3c-.4 2.6.6 5.2 2.7 6.7l23.5 23v5.1h-118V367l24.3-23.6c2.4-2.4 2.4-3.1 2.4-6.7V199.8l-67.6 171.6h-9.1L125 199.8v115c-.7 4.8 1 9.7 4.4 13.2l31.6 38.3v5.1H71.2v-5.1l31.6-38.3c3.4-3.5 4.9-8.4 4.1-13.2v-133c.4-3.7-1-7.3-3.8-9.8L75 138.1V133h87.3l67.4 148L289 133.1h83.2v5z"
                />
              </svg>
            </a>
          </li>
        </ul>
        <p>
          Microverse Copyright 2022
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Testing component rednering propperly renders New screen 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container page-admin"
      >
        <div
          class="info-container"
        >
          <h1>
            Add new car
          </h1>
          <form
            method="post"
          >
            <fragment>
              <div
                class="grid-display grid-simple"
              >
                <div
                  class="add-margin-below"
                >
                  <label
                    for="brand"
                  >
                    Brand
                  </label>
                  <input
                    class="form-field"
                    id="brand"
                    name="brand"
                    placeholder="Ferrari"
                    required=""
                    type="text"
                  />
                </div>
              </div>
              <div
                class="grid-display grid-double"
              >
                <div
                  class="add-margin-below"
                >
                  <label
                    for="brand"
                  >
                    Model
                  </label>
                  <input
                    class="form-field"
                    id="model"
                    name="model"
                    placeholder="Testarossa"
                    required=""
                    type="text"
                  />
                </div>
                <div
                  class="add-margin-below grid-double"
                >
                  <label
                    for="year"
                  >
                    Year
                  </label>
                  <input
                    class="form-field"
                    id="year"
                    name="year"
                    placeholder="2018"
                    required=""
                    type="text"
                  />
                </div>
              </div>
              <div
                class="grid-display grid-double"
              >
                <div
                  class="add-margin-below grid-double"
                >
                  <label
                    for="country"
                  >
                    Country
                  </label>
                  <input
                    class="form-field"
                    id="country"
                    name="country"
                    placeholder="Italia"
                    required=""
                    type="text"
                  />
                </div>
                <div
                  class="add-margin-below"
                >
                  <label
                    for="color"
                  >
                    Color
                  </label>
                  <select
                    class="form-field"
                    name="color"
                    required=""
                  >
                    <option
                      value=""
                    >
                      Select one
                    </option>
                    <option
                      value="Black"
                    >
                      Black
                    </option>
                    <option
                      value="Blue"
                    >
                      Blue
                    </option>
                    <option
                      value="Brown"
                    >
                      Brown
                    </option>
                    <option
                      value="Carbon"
                    >
                      Carbon
                    </option>
                    <option
                      value="Green"
                    >
                      Green
                    </option>
                    <option
                      value="Orange"
                    >
                      Orange
                    </option>
                    <option
                      value="Red"
                    >
                      Red
                    </option>
                    <option
                      value="Silver"
                    >
                      Silver
                    </option>
                    <option
                      value="Yellow"
                    >
                      Yellow
                    </option>
                    <option
                      value="White"
                    >
                      White
                    </option>
                  </select>
                </div>
              </div>
              <h3>
                Technical Specs
              </h3>
              <div
                class="grid-display grid-cuadra"
              >
                <div
                  class="add-margin-below"
                >
                  <label
                    for="power"
                  >
                    Power
                  </label>
                  <input
                    class="form-field"
                    id="power"
                    name="power"
                    placeholder="780 CV (574 kW)"
                    required=""
                    type="text"
                  />
                </div>
                <div
                  class="add-margin-below"
                >
                  <label
                    for="maxSpeed"
                  >
                    Max Speed
                  </label>
                  <input
                    class="form-field"
                    id="maxSpeed"
                    name="maxSpeed"
                    placeholder="355 km/h"
                    required=""
                    type="text"
                  />
                </div>
                <div
                  class="add-margin-below"
                >
                  <label
                    for="acceleration"
                  >
                    Acceleration
                  </label>
                  <input
                    class="form-field"
                    id="acceleration"
                    name="acceleration"
                    placeholder="9.8s"
                    required=""
                    type="text"
                  />
                </div>
                <div
                  class="add-margin-below"
                >
                  <label
                    for="price"
                  >
                    Price(USD)
                  </label>
                  <input
                    class="form-field"
                    id="price"
                    name="price"
                    placeholder="100"
                    required=""
                    type="text"
                  />
                </div>
              </div>
              <h3>
                Description
              </h3>
              <div
                class="add-margin-below"
              >
                <textarea
                  class="form-field"
                  name="description"
                  required=""
                />
              </div>
            </fragment>
            <div
              class="grid-flex"
            >
              <a
                href="/admin"
              >
                Back to admin
              </a>
              <button
                type="submit"
              >
                Save
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container page-admin"
    >
      <div
        class="info-container"
      >
        <h1>
          Add new car
        </h1>
        <form
          method="post"
        >
          <fragment>
            <div
              class="grid-display grid-simple"
            >
              <div
                class="add-margin-below"
              >
                <label
                  for="brand"
                >
                  Brand
                </label>
                <input
                  class="form-field"
                  id="brand"
                  name="brand"
                  placeholder="Ferrari"
                  required=""
                  type="text"
                />
              </div>
            </div>
            <div
              class="grid-display grid-double"
            >
              <div
                class="add-margin-below"
              >
                <label
                  for="brand"
                >
                  Model
                </label>
                <input
                  class="form-field"
                  id="model"
                  name="model"
                  placeholder="Testarossa"
                  required=""
                  type="text"
                />
              </div>
              <div
                class="add-margin-below grid-double"
              >
                <label
                  for="year"
                >
                  Year
                </label>
                <input
                  class="form-field"
                  id="year"
                  name="year"
                  placeholder="2018"
                  required=""
                  type="text"
                />
              </div>
            </div>
            <div
              class="grid-display grid-double"
            >
              <div
                class="add-margin-below grid-double"
              >
                <label
                  for="country"
                >
                  Country
                </label>
                <input
                  class="form-field"
                  id="country"
                  name="country"
                  placeholder="Italia"
                  required=""
                  type="text"
                />
              </div>
              <div
                class="add-margin-below"
              >
                <label
                  for="color"
                >
                  Color
                </label>
                <select
                  class="form-field"
                  name="color"
                  required=""
                >
                  <option
                    value=""
                  >
                    Select one
                  </option>
                  <option
                    value="Black"
                  >
                    Black
                  </option>
                  <option
                    value="Blue"
                  >
                    Blue
                  </option>
                  <option
                    value="Brown"
                  >
                    Brown
                  </option>
                  <option
                    value="Carbon"
                  >
                    Carbon
                  </option>
                  <option
                    value="Green"
                  >
                    Green
                  </option>
                  <option
                    value="Orange"
                  >
                    Orange
                  </option>
                  <option
                    value="Red"
                  >
                    Red
                  </option>
                  <option
                    value="Silver"
                  >
                    Silver
                  </option>
                  <option
                    value="Yellow"
                  >
                    Yellow
                  </option>
                  <option
                    value="White"
                  >
                    White
                  </option>
                </select>
              </div>
            </div>
            <h3>
              Technical Specs
            </h3>
            <div
              class="grid-display grid-cuadra"
            >
              <div
                class="add-margin-below"
              >
                <label
                  for="power"
                >
                  Power
                </label>
                <input
                  class="form-field"
                  id="power"
                  name="power"
                  placeholder="780 CV (574 kW)"
                  required=""
                  type="text"
                />
              </div>
              <div
                class="add-margin-below"
              >
                <label
                  for="maxSpeed"
                >
                  Max Speed
                </label>
                <input
                  class="form-field"
                  id="maxSpeed"
                  name="maxSpeed"
                  placeholder="355 km/h"
                  required=""
                  type="text"
                />
              </div>
              <div
                class="add-margin-below"
              >
                <label
                  for="acceleration"
                >
                  Acceleration
                </label>
                <input
                  class="form-field"
                  id="acceleration"
                  name="acceleration"
                  placeholder="9.8s"
                  required=""
                  type="text"
                />
              </div>
              <div
                class="add-margin-below"
              >
                <label
                  for="price"
                >
                  Price(USD)
                </label>
                <input
                  class="form-field"
                  id="price"
                  name="price"
                  placeholder="100"
                  required=""
                  type="text"
                />
              </div>
            </div>
            <h3>
              Description
            </h3>
            <div
              class="add-margin-below"
            >
              <textarea
                class="form-field"
                name="description"
                required=""
              />
            </div>
          </fragment>
          <div
            class="grid-flex"
          >
            <a
              href="/admin"
            >
              Back to admin
            </a>
            <button
              type="submit"
            >
              Save
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Testing component rednering propperly renders Signup screen 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container page-login"
      >
        <form
          action="#"
          class="login-form"
          id="signup-form"
          method="POST"
        >
          <h2>
            SIGNUP
          </h2>
          <div
            class="add-padding-below"
          >
            <span
              class="error-message"
            >
              This username or email already exists 
            </span>
            <input
              class="form-field"
              id="name"
              name="name"
              placeholder="Name"
              required=""
              type="text"
            />
          </div>
          <div
            class="add-padding-below"
          >
            <input
              class="form-field"
              id="email"
              name="email"
              placeholder="Email"
              required=""
              type="email"
            />
          </div>
          <div
            class="add-padding-below"
          >
            <input
              class="form-field"
              id="password"
              name="password"
              placeholder="Password"
              required=""
              type="password"
            />
          </div>
          <p
            class="signin-message"
          >
            Already have an account?
            <a
              href="/login"
            >
              LOGIN
            </a>
          </p>
          <div
            class="form-bottom-bar"
          >
            <button
              class="main color-dark"
              type="button"
            >
              Signup
            </button>
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container page-login"
    >
      <form
        action="#"
        class="login-form"
        id="signup-form"
        method="POST"
      >
        <h2>
          SIGNUP
        </h2>
        <div
          class="add-padding-below"
        >
          <span
            class="error-message"
          >
            This username or email already exists 
          </span>
          <input
            class="form-field"
            id="name"
            name="name"
            placeholder="Name"
            required=""
            type="text"
          />
        </div>
        <div
          class="add-padding-below"
        >
          <input
            class="form-field"
            id="email"
            name="email"
            placeholder="Email"
            required=""
            type="email"
          />
        </div>
        <div
          class="add-padding-below"
        >
          <input
            class="form-field"
            id="password"
            name="password"
            placeholder="Password"
            required=""
            type="password"
          />
        </div>
        <p
          class="signin-message"
        >
          Already have an account?
          <a
            href="/login"
          >
            LOGIN
          </a>
        </p>
        <div
          class="form-bottom-bar"
        >
          <button
            class="main color-dark"
            type="button"
          >
            Signup
          </button>
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
